--- a/index.jade
+++ b/index.jade
@@ -69,7 +69,7 @@ html(lang="end")
                 "ideation, research, design, evaluate", 
                 "Sep '15 - Dec '15", 
                 "instapark.html", 
-                "http://placehold.it/1500x925"
+                "img/instabanner.png"
             )
 
             +project_row(
@@ -110,7 +110,7 @@ html(lang="end")
                 "Idea generator, Paper mockups, Material design",
                 "September 2015 - 1.5 hours",
                 "shure.html",
-                "http://placehold.it/1500x925"    
+                "img/shurebanner.png"    
             )
             
             +project_row(
