--- a/navbar.scss
+++ b/navbar.scss
@@ -30,7 +30,7 @@ body {
 }
 
 .navbar-brand {
-    color: $color-cobaltblue !important;
+    color: $color-cobaltblue# !important;
 }
 
 .navbar-brand-currentpage {
