--- a/shure.jade
+++ b/shure.jade
@@ -20,7 +20,7 @@ html(lang="en")
             
             "",
             
-            "http://placehold.it/1500x925"
+            "img/shurebanner.png"
         )
         
         +navbar_mixin(pageTitle, [["challenge","Challenge"]])
