--- a/website_design.jade
+++ b/website_design.jade
@@ -19,7 +19,7 @@ html(lang="en")
             
             "Dec'16 - Jan'17",
             
-            "http://placehold.it/1500x925"
+            "img/website_home.png"
         )
         
         +navbar_mixin(pageTitle, [["challenge","Challenge"]])
@@ -101,6 +101,8 @@ html(lang="en")
                                 ul.ptufte
                                     li didn't meet the criteria of allowing me to guide the user through the portfolio. 
                                     li Presented with a grid of options, all the projects in a row are presented at an equal accessibility and importance level and the reader would be inclined to click any one of them.
+                                    li(style="list-style:none") &nbsp;
+                                    li(style="list-style:none") &nbsp;
 
                 .col-md-4                    
                     .card.card-elt
@@ -112,7 +114,7 @@ html(lang="en")
                                 p.ptufte The projects presented top-down in a list implicitly rank the projects and the reader is inclined to click and read the first one. However, I <strong>discarded it</strong> because:
                                 ul.ptufte 
                                     li Each item's primary content is an image and doesn't allow me to provide some summary information about each project which will allow reader to quickly assess impact of reader. 
-                                    li An image alone may not give enough clues about the impact of this project and may not interest reader enough to read the project.                                
+                                    li An image alone may not give enough clues about the impact of this project and may not interest reader enough to read the project.    
                 
                 .col-md-4
                     .card.card-elt
@@ -126,6 +128,8 @@ html(lang="en")
                                     li it allowed me to present information in a prioritized fashion
                                     li present a short blurb describing purpose, impact, role and technologies involved in this project along with the project image
                                     li allows readers to quickly scan through the crux of this project.
+                                    li(style="list-style:none") &nbsp;
+                                br
             .row
                 .col-md-6.center-block(style="float:none;padding-top:5%;")
                         h2.h2tufte(style="padding-bottom:5%;text-align:center;")  Detailed wireframe of selected solution of Home page
