--- a/common_head.jade
+++ b/common_head.jade
@@ -61,7 +61,7 @@ mixin head_mixin(PageTitle, is_work)
         
         style.
             .navbar-default {
-                background-color: #293E68;
+                background-color: #242134;
             }
 
             .navbar-brand {
@@ -76,6 +76,11 @@ mixin head_mixin(PageTitle, is_work)
                 color: white !important;
             }
 
+            .navbar-default .navbar-nav>li.active>a {
+                color: black !important;
+            }
+
             .navbar-default .navbar-nav>li>a:hover {
                 color: black !important;
+                background-color: #f5f5f5 !important;
             }
