about me updated

--- a/story.jade
+++ b/story.jade
@@ -50,16 +50,16 @@ html(lang="en")
                             td(style="width:33%;")
                                 +hover_card_no_title1("img/delhi.jpg", "", "imghvr-fade", "Growing up", "Delhi - I was born and brought up here. Sometimes I get nostalgic and realize how much I loved Delhi and everything about it.")
                             td                                
-                                +hover_card_no_title1("img/seattle.png", "", "imghvr-fade", "Resident of Seattle", "I moved to Seattle WA in 2013 and now I call it my US hometown! I love this beautiful city!")
+                                +hover_card_no_title1("img/seattle.png", "", "imghvr-fade", "Resident of Seattle", "I moved to Seattle in 2013 and now I call it my US hometown! I don't know if it's the cofree or seahawks, but I love this beautiful city! And who doesn't like watching an active volcano from the backyard :P")
                         tr
                             td
-                                +hover_card_no_title1("img/board.png", "", "imghvr-fade", "Go Blue!", "I am currently a graduate student of University of Michigan Ann Arbor and proud of being being a wolverine. Because wherever you are in the world,we wolverines share a special bond from protecting the sacred M in the Diag.")                    
+                                +hover_card_no_title1("img/board.png", "", "imghvr-fade", "Boardgames!", "When I am not designing, I am often engrossed with playing strategy board games.  This has often helped me to look at problems from diverse perspectives.")                    
                             td
                                 table
                                     tbody
                                         tr(height="50%")
                                             td                                            
-                                                +hover_card_no_title1("img/umich.jpg", "", "imghvr-fade", "Design", "I enjoy problem solving and simplifying complex things")                                            
+                                                +hover_card_no_title1("img/umich.jpg", "", "imghvr-fade", "Go Blue!", "I am currently a graduate student of University of Michigan Ann Arbor and a proud wolverine. Wherever we are in the world, we wolverines share a special bond from protecting the sacred M in the Diag.")                                            
                                         tr
                                             td
                                                 +hover_card_no_title1("img/origami1.png", "", "imghvr-fade", "Design", "I enjoy problem solving and simplifying complex things")
