--- a/common_clickable_image.jade
+++ b/common_clickable_image.jade
@@ -49,7 +49,7 @@ mixin card_no_title_v4(image_src, style_setting)
 
 mixin hover_card_no_title1(image_src, style_setting, hover_class, headline, fig_caption)
     .card2(style="padding:0.7rem;")
-        figure(class=hover_class style="background-color: #94001c;")
+        figure(class=hover_class style="background-color: #242134;")
             img(class="img-responsive" src=image_src style=style_setting title="Click to see enlarged image")
             figcaption(style="background-color: #242134;")
                 h2.h2tufte= headline
@@ -57,7 +57,7 @@ mixin hover_card_no_title1(image_src, style_setting, hover_class, headline, fig_
 
 mixin hover_card_no_title(image_src, style_setting, hover_class, headline, fig_caption)
     .card(style="padding:1rem;")
-        figure(class=hover_class style="background-color: #94001c;")
+        figure(class=hover_class style="background-color: #242134;")
             img(class="img-responsive" src=image_src style=style_setting title="Click to see enlarged image")
             figcaption(style="background-color: #242134;")
                 h2.h2tufte= headline
