--- a/index.jade
+++ b/index.jade
@@ -123,7 +123,7 @@ html(lang="end")
                 "Python, Flask, Jinja, Bootstrap",
                 "Nov'15 - Dec'15",
                 "cssquiz.html",
-                "http://placehold.it/1500x925",
+                "img/hcf1.png",
                 "https://github.com/dcamerik/SI-539-CSS-Quiz"
             )            
             
@@ -137,7 +137,7 @@ html(lang="end")
                 "Data set collection, Programming, Data visualization",
                 "February 2016 - 1 day",
                 "diabetes.html",
-                "http://placehold.it/1500x925",
+                "img/viz.png",
                 "https://github.com/radhikamani88/diabetesviz"
             )
             
