--- a/shure.jade
+++ b/shure.jade
@@ -23,7 +23,7 @@ html(lang="en")
             "img/shurebanner.png"
         )
         
-        +navbar_mixin(pageTitle, [["challenge","Challenge"]])
+        +navbar_mixin(pageTitle, [["ideation", "Ideation"],["research", "Research"],["design","Design"], ["award", "Award"], ["takeaway", "Takeaways"]])
         
         .container
             .row
@@ -34,11 +34,11 @@ html(lang="en")
                         
                         p There was no existing mobile application to make the music truly social. Many music apps focus on managing song libraries and listening. Shure wanted a music app that is social to help promote brand awareness of their Sound instruments
                         
-                        h2 Ideation
+                        h2(id="ideation") Ideation
                         
                         p We started the design process by brainstorming our ideas for deciding on features for our product. Next we decided to make a product which is intuitive and simple to follow. This helps the user to easily record and share as well as enjoy the concert too. We concluded that it will be easier to make a mobile application as it would be easy to carry to concerts and any place of social gatherings. We also decided the target audience to be anybody who is a regular concert goer and likes to share music with friends. 
                         
-                        h3 Competitive analysis
+                        h3(id="research") Competitive analysis
                         
                         p I did the competitive analysis for the project for which I focused on the looking at the existing application available in google play store. 
                         
@@ -59,7 +59,7 @@ html(lang="en")
                         p Shortcomings of MOTIV were that there was no social sharing and uers cannot comment or share music files.
 
             
-                        h2 Design
+                        h2(id="design") Design
                         
                         h3 MVP1 feature list
                         
@@ -90,7 +90,7 @@ html(lang="en")
             .row
                 article.nobottompadding
                     section
-                        h2 Judge's decision
+                        h2(id="award") Judge's decision
                         
                         p We are awarded the 2nd position for our idea, since we managed to finish the information flow, paper prototype, sample Hi FI mockups and presentation slides within 1.5 hours. The judges appreciated the idea of GPS locator and collaboration.
 
@@ -104,6 +104,6 @@ html(lang="en")
             .row
                 article.nobottompadding
                     section
-                        h2 Takeaways
+                        h2(id="takeaway") Takeaways
                         
                         p This was my first design jam and I was quite new to the idea of working together in a team. It made me realize the importance of working together in a tight schedule. I also had the opportunity to meet and work with people from different backgrounds. Lastly I felt I could improve more on my presentation skills as I usually speak very fast.
