--- a/website_design.jade
+++ b/website_design.jade
@@ -22,7 +22,7 @@ html(lang="en")
             "img/website_home.png"
         )
         
-        +navbar_mixin(pageTitle, [["challenge","Challenge"]])
+        +navbar_mixin(pageTitle, [["l1", "Research"],["l2", "Goals"], ["l3", "Decisions"], ["l4","Typography"], ["l5", "Development"],["l6", "Takeaways"]])
         
         .container
             .row
@@ -38,7 +38,7 @@ html(lang="en")
                         p Upon inspecting it as a UX problem, I realized that I first needed to define a success criteria (goal) for my portfolio. In turn that led me to ask &mdash; Who is the target audience?
                         p I kept the target audience was prospective employers. I then asked myself &mdash; what would prospective employers like to see in my portfolio? 
                         
-                        h2 Research
+                        h2(id="l1") Research
                         
                         p It would have been awesome if I could directly ask the prospective employers what they expected out of a portfolio. Since, that was not possible, I did a bunch of research of my own:
                         
@@ -47,7 +47,7 @@ html(lang="en")
                             li Looked at portfolios of UX designers employed already
                             li Read various internet articles on building a portfolio
                         
-                        h2 Goals
+                        h2(id="l2") Goals
                         
                         p Based on above research I set the following design goals.
                         
@@ -74,7 +74,7 @@ html(lang="en")
                                                 dt Reader can read on any device type
                                                 dd This meant the website need to be responsive at-least and being adaptive to device type would be a very nice thing to have                        
                         
-                        h2 Explorations &amp; decisions
+                        h2(id="l3") Explorations &amp; decisions
                     
                         h3 KISS principle. Occam's razor
                         p No fancy animations and Javascript libraries that distract or conflict with animation present in your actual work. Keep website design simple and let your real work shine through. When it doubt choose the simpler option.
@@ -164,7 +164,7 @@ html(lang="en")
             .row
                 article.nobottompadding
                     section
-                        h3 Typography
+                        h3(id="l4") Typography
 
                         p
                             label(for="mn-figure-1" class="margin-toggle").
@@ -211,7 +211,7 @@ html(lang="en")
                         p The practices followed by Edward Tufte have been put down in a CSS file as a Github project called <a href="https://github.com/edwardtufte/tufte-css">Tufte-CSS</a>
                         
                         
-                        h2(id="") Development
+                        h2(id="l5") Development
                         
                         h3 Themes and Wix didn't suffice
                         
@@ -238,7 +238,7 @@ html(lang="en")
             .row
                 article.nobottompadding
                     section
-                        h3 Lessons learnt
+                        h3(id="l6") Lessons learnt
                         
                         p Designing this portfolio myself has been a great learning experience. I mastered a lot of CSS3 concepts, SCSS, Jade and Javascript because of this project. I learnt a lot about typography and fonts.
                         p It was also immensely satisfying to applying UX design principles to design my own portfolio.
