Minor updates and some files

--- a/instapark.jade
+++ b/instapark.jade
@@ -240,7 +240,7 @@ html(lang="en")
                 .col-md-6.bottompadding
                     +card_center_title("img/w_instapark/f1_seller_gets_request.gif", "", "Seller sees a parking request notification and responds", "")
                 .col-md-6.bottompadding
-                    +card_center_title("img/w_instapark/f2_wants_stats_to_set_price.gif", "", "Seller utilizes stats provided by Instapark to set a good price")
+                    +card_center_title("img/w_instapark/f2_wants_stats_to_set_price.gif", "", "Seller utilizes stats to set a good price")
                     
         .container
             .row
