--- a/story.jade
+++ b/story.jade
@@ -50,7 +50,7 @@ html(lang="en")
                             td(style="width:33%;")
                                 +hover_card_no_title1("img/delhi.jpg", "", "imghvr-fade", "Growing up", "Delhi - I was born and brought up here. Sometimes I get nostalgic and realize how much I loved Delhi and everything about it.")
                             td                                
-                                +hover_card_no_title1("img/seattle.png", "", "imghvr-fade", "Resident of Seattle", "I moved to Seattle in 2013 and now I call it my US hometown! I don't know if it's the cofree or seahawks, but I love this beautiful city! And who doesn't like watching an active volcano from the backyard :P")
+                                +hover_card_no_title1("img/seattle.png", "", "imghvr-fade", "Calling Seattle my home!", "I moved to Seattle in 2013 and now I call it my US hometown! I don't know if it's the cofree or seahawks, but I love this beautiful city! And who doesn't like watching an active volcano from the backyard :P")
                         tr
                             td
                                 +hover_card_no_title1("img/board.png", "", "imghvr-fade", "Boardgames!", "When I am not designing, I am often engrossed with playing strategy board games.  This has often helped me to look at problems from diverse perspectives.")                    
